src/objects/NGAMember__c.object
<CustomObject>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>NGAMembers</relationshipLabel>
        <relationshipName>NGAMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Available_Curr_Fiscal_Yr_Total__c</fullName>
        <formula>Total_Obligated_Curr_Fiscal_Yr_Total__c  +  Unobligated_Balance_Curr_Fiscal_Yr_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total_Available Curr Fiscal Yr Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Available_Non_Fed_Share_Matching__c</fullName>
        <formula>Total_Obligated_Non_Fed_Share_Matching__c  +  Unobligated_Balance_Non_Fed_Share_Match__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Available Non Fed Share Matching</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Available_cp_prv_ths_yr__c</fullName>
        <formula>Total_Obligated_cp_prv_ths_yr__c +  Unobligated_Balance_cp_prv_ths_yr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Available cp prv ths yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Available_cp_this_awd__c</fullName>
        <formula>Total_Obligated_cp_this_awd__c  +  Unobligated_Balance_cp_this_awd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Available cp this awd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Matching_Funds_Required_To_Date__c</fullName>
        <label>Total Matching Funds Required To-Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Obligated_Curr_Fiscal_Yr_Total__c</fullName>
        <formula>Total_Obligated_cp_prv_ths_yr__c  +  Total_Obligated_cp_this_awd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Obligated Current Fiscal Year Tota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Obligated_Non_Fed_Share_Matching__c</fullName>
        <label>Total Obligated Non-Fed Share Matching</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Obligated_cp_prv_ths_yr__c</fullName>
        <label>Total Obligated cp prv ths yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Obligated_cp_this_awd__c</fullName>
        <label>Total Obligated cp this awd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unobligated_Balance_Curr_Fiscal_Yr_Total__c</fullName>
        <label>Unobligated Balance Curr Fiscal Yr Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unobligated_Balance_Non_Fed_Share_Match__c</fullName>
        <label>Unobligated Balance Non Fed Share Match</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unobligated_Balance_cp_prv_ths_yr__c</fullName>
        <label>Unobligated Balance cp prv ths yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unobligated_Balance_cp_this_awd__c</fullName>
        <label>Unobligated_Balance_cp_this_awd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cp_line_amts__c</fullName>
        <label>cp line amts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cp_mom_lines__c</fullName>
        <label>cp_mom_lines</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cp_prv_yrs_awd__c</fullName>
        <label>cp prv yrs awd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>NGAMember</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Award__c</columns>
        <columns>Total_Available_Curr_Fiscal_Yr_Total__c</columns>
        <columns>Total_Available_cp_prv_ths_yr__c</columns>
        <columns>Total_Available_cp_this_awd__c</columns>
        <columns>Total_Available_Non_Fed_Share_Matching__c</columns>
        <columns>Total_Matching_Funds_Required_To_Date__c</columns>
        <columns>Total_Obligated_cp_prv_ths_yr__c</columns>
        <columns>Total_Obligated_cp_this_awd__c</columns>
        <columns>Total_Obligated_Curr_Fiscal_Yr_Total__c</columns>
        <columns>Total_Obligated_Non_Fed_Share_Matching__c</columns>
        <columns>Unobligated_Balance_cp_this_awd__c</columns>
        <columns>Unobligated_Balance_cp_prv_ths_yr__c</columns>
        <columns>Unobligated_Balance_Curr_Fiscal_Yr_Total__c</columns>
        <columns>Unobligated_Balance_Non_Fed_Share_Match__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NG-{0000}</displayFormat>
        <label>NGAMembers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NGAMembers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>